[project]
name = "pubmed-paper-fetcher-roshalds"
version = "0.1.0"
description = ""
authors = [
    {name = "RoshalDsouza24",email = "roshalds789@gmail.com"}
]

requires-python = ">=3.12"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:app"

[tool.poetry]
packages = [
    { include = "pubmed_paper_fetcher", from = "src" }
]


